Update: custom build of opencv.js that is smaller
Signed-off-by: RaviRahar <ravirahar33@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Scafix</title>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <script async src="https://docs.opencv.org/master/opencv.js" type="text/javascript"></script>
-  <script src="https://docs.opencv.org/master/utils.js"></script>
+  <!--<script async src="./modules/opencv/loader.js" type="module"></script>-->
+  <!--<script src="https://docs.opencv.org/master/utils.js"></script>-->
+  <script async src="./modules/opencv/opencv.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script>
     // Set worker
