--- a/index.html
+++ b/index.html
@@ -1,64 +1,111 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scafix</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <script
+      async
+      src="./modules/opencv/opencv.js"
+      type="text/javascript"
+    ></script>
+    <!--<script src="https://docs.opencv.org/master/utils.js"></script>-->
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scafix</title>
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  <!--<script async src="./modules/opencv/loader.js" type="module"></script>-->
-  <!--<script src="https://docs.opencv.org/master/utils.js"></script>-->
-  <script async src="./modules/opencv/opencv.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-  <script>
-    // Set worker
-    pdfjsLib.GlobalWorkerOptions.workerSrc =
-      "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
-  </script>
-  <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
-</head>
+    <!-- <script src="./utils/pdf.min.js"></script> -->
+    <!-- <script> -->
+    <!--   // Set worker -->
+    <!--   pdfjsLib.GlobalWorkerOptions.workerSrc = "./utils/pdf.worker.min.js"; -->
+    <!-- </script> -->
+    <!-- <script src="./utils/pdf-lib.min.js"></script> -->
 
-<body>
-  <div id="libLoadingScreen" style="display: none">Loading ...</div>
-  <div id="app">
-    <h1>Scafix</h1>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script>
+      // Set worker
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+    </script>
+    <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </head>
 
-    <h2 class="tag-line" id="tagLine">Clean Scanned PDFs</h2>
+  <body>
+    <div id="libLoadingScreen">Loading ...</div>
+    <div id="app">
+      <h1 id="appName">Scafix</h1>
 
-    <div id="pdfInputContainer">
-      <input type="file" id="pdfInput" accept="application/pdf" />
+      <h2 class="tag-line visible" id="tagLine">Clean Scanned PDFs</h2>
+
+      <div class="visible" id="pdfInputContainer">
+        <input type="file" id="pdfInput" accept="application/pdf" />
+      </div>
+
+      <div id="fileName"></div>
+
+      <div class="content-wrapper" id="contentWrapper">
+        <!-- Buttons at the top -->
+        <div class="button-group button-top" id="topButtons">
+          <button id="resetButton" onclick="resetApp()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="btn-icon"
+              viewBox="0 0 512 512"
+            >
+              <path
+                d="M125.7 160l50.3 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L48 224c-17.7 0-32-14.3-32-32L16 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3s-163.8-62.5-226.3 0L125.7 160z"
+              />
+            </svg>
+            <span class="btn-label">Reset</span>
+          </button>
+          <button disabled id="downloadButton" onclick="downloadOutput()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="btn-icon"
+              viewBox="0 0 512 512"
+            >
+              <path
+                d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 242.7-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7 288 32zM64 352c-35.3 0-64 28.7-64 64l0 32c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-32c0-35.3-28.7-64-64-64l-101.5 0-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352 64 352zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
+              />
+            </svg>
+            <span class="btn-label">Download</span>
+          </button>
+        </div>
+
+        <!-- Buttons for page navigation -->
+        <div class="button-group button-bottom" id="bottomButtons">
+          <button disabled id="showPrevButton" onclick="showPreviousPage()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="btn-icon"
+              viewBox="0 0 512 512"
+            >
+              <path
+                d="M459.5 440.6c9.5 7.9 22.8 9.7 34.1 4.4s18.4-16.6 18.4-29l0-320c0-12.4-7.2-23.7-18.4-29s-24.5-3.6-34.1 4.4L288 214.3l0 41.7 0 41.7L459.5 440.6zM256 352l0-96 0-128 0-32c0-12.4-7.2-23.7-18.4-29s-24.5-3.6-34.1 4.4l-192 160C4.2 237.5 0 246.5 0 256s4.2 18.5 11.5 24.6l192 160c9.5 7.9 22.8 9.7 34.1 4.4s18.4-16.6 18.4-29l0-64z"
+              />
+            </svg>
+            <span class="btn-label">Previous</span>
+          </button>
+          <button disabled id="showNextButton" onclick="showNextPage()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="btn-icon"
+              viewBox="0 0 512 512"
+            >
+              <path
+                d="M52.5 440.6c-9.5 7.9-22.8 9.7-34.1 4.4S0 428.4 0 416L0 96C0 83.6 7.2 72.3 18.4 67s24.5-3.6 34.1 4.4L224 214.3l0 41.7 0 41.7L52.5 440.6zM256 352l0-96 0-128 0-32c0-12.4 7.2-23.7 18.4-29s24.5-3.6 34.1 4.4l192 160c7.3 6.1 11.5 15.1 11.5 24.6s-4.2 18.5-11.5 24.6l-192 160c-9.5 7.9-22.8 9.7-34.1 4.4s-18.4-16.6-18.4-29l0-64z"
+              />
+            </svg>
+            <span class="btn-label">Next</span>
+          </button>
+        </div>
+
+        <!-- Canvases -->
+        <div class="canvas-container" id="canvasContainer">
+          <canvas id="originalCanvas"></canvas>
+          <canvas id="diffCanvas"></canvas>
+          <canvas id="finalCanvas"></canvas>
+        </div>
+      </div>
     </div>
-
-    <div id="fileName" style="display: none"></div>
-
-    <div class="content-wrapper" id="contentWrapper" style="display: none">
-      <!-- Buttons at the top -->
-      <div class="button-group button-top" id="topButtons">
-        <button id="resetButton" onclick="resetApp()">Reset</button>
-        <button disabled id="downloadButton" onclick="downloadOutput()">
-          Download
-        </button>
-      </div>
-
-      <!-- Buttons for page navigation -->
-      <div class="button-group button-bottom" id="bottomButtons">
-        <button disabled id="showPrevButton" onclick="showPreviousPage()">
-          Previous
-        </button>
-        <button disabled id="showNextButton" onclick="showNextPage()">
-          Next
-        </button>
-      </div>
-
-      <!-- Canvases -->
-      <div class="canvas-container" id="canvasContainer">
-        <canvas id="originalCanvas"></canvas>
-        <canvas id="diffCanvas"></canvas>
-        <canvas id="finalCanvas"></canvas>
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
